# email-newsletter

./: Cargo.toml  LICENSE  Readme.md
migrations/: 20260130053711_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs
tests/: health_check.rs
