[package]
name = "email-newsletter"
version = "0.1.0"
authors = ["Saransh Agrawal <saranshagarwal202.github.io>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email-newsletter"

[dependencies]
actix-web = "4.12.1"
serde = {version = "1.0.228", features = ["derive"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.6.0"

[dev-dependencies]
reqwest = "0.12"
